Avoid overflow

--- a/source/assets/stylesheets/base/_base.type.sass
+++ b/source/assets/stylesheets/base/_base.type.sass
@@ -6,6 +6,7 @@ body
   font-family: $font-paragraph
   color: rgba(black, .7)
   background-color: $color-background
+  overflow-x: hidden
 
   +bp(md-only)
     font-size: .8em
